fix: remove top border in ContactListComponent and raise HeaderComponent z-index

--- a/src/app/main-pages/contacts/contact-list/contact-list.component.scss
+++ b/src/app/main-pages/contacts/contact-list/contact-list.component.scss
@@ -3,7 +3,6 @@
 @use "./../../../../styles/_variables" as *;
 
 section {
-  border-top: 1px solid rgba(0, 0, 0, 0.1);
   width: 456px;
   height: calc(100vh - 96px);
   padding: min(5%, 32px);
