--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -3,7 +3,7 @@
 
 header {
   @include dFlex($jc: space-between);
-  z-index: 1;
+  z-index: 4;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.1);
 }
 
